Bug 804811, propagate events even from disabled form controls to chrome. B2G-only hack, r=jst,a=bb+